--- a/infrastructure/templates/cmake-presets/ubuntu.mustache
+++ b/infrastructure/templates/cmake-presets/ubuntu.mustache
@@ -7,9 +7,9 @@
             "binaryDir": "${sourceDir}/build.dir",
             "cacheVariables": {
                 "CMAKE_BUILD_TYPE": "Release",
-                "CMAKE_C_COMPILER": "clang-12",
-                "CMAKE_CXX_COMPILER": "clang++-12",
-                "CMAKE_PREFIX_PATH": "/usr/lib/llvm-12/cmake/;/usr/lib/cmake/clang-12/"
+                "CMAKE_C_COMPILER": "clang-{{LLVM_VERSION}}",
+                "CMAKE_CXX_COMPILER": "clang++-{{LLVM_VERSION}}",
+                "CMAKE_PREFIX_PATH": "/usr/lib/llvm-{{LLVM_VERSION}}/cmake/;/usr/lib/cmake/clang-{{LLVM_VERSION}}/"
             }
         }
     ],
