--- a/infrastructure/templates/devcontainers/ubuntu/devcontainer.json.mustache
+++ b/infrastructure/templates/devcontainers/ubuntu/devcontainer.json.mustache
@@ -1,5 +1,5 @@
 {
-	"name": "{{OS}}:{{OS_VERSION}}-LLVM:{{LLVM_VERSION}}",
+	"name": "{{OS_NAME}}:{{OS_VERSION}}-LLVM:{{LLVM_VERSION}}",
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
@@ -16,7 +16,7 @@
 			"version": "3.31.1"
 		}
 	},
-	"postCreateCommand": "infrastructure/devcontainer_post_create.sh {{LLVM_VERSION}}",
+	"postCreateCommand": "infrastructure/devcontainer_post_create.sh {{OS_NAME}} {{LLVM_VERSION}}",
 	"customizations": {
 		"vscode": {
 			"extensions": [
