--- a/infrastructure/templates/github-actions/ci-macos.yml.mustache
+++ b/infrastructure/templates/github-actions/ci-macos.yml.mustache
@@ -1,4 +1,4 @@
-name: macOS CI
+{{=[[ ]]=}}name: macOS CI
 
 env:
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
@@ -18,18 +18,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - OS_NAME: "macos"
-            LLVM_VERSION: 13
-          - OS_NAME: "macos"
-            LLVM_VERSION: 14
-          - OS_NAME: "macos"
-            LLVM_VERSION: 15
-          - OS_NAME: "macos"
-            LLVM_VERSION: 16
-          - OS_NAME: "macos"
-            LLVM_VERSION: 17
-          - OS_NAME: "macos"
-            LLVM_VERSION: 18
+          [[#strategy]]
+          - OS_NAME: "[[ OS_NAME ]]"
+            LLVM_VERSION: [[ LLVM_VERSION ]]
+          [[/strategy]]
     steps:
       - name: Fix git
         run: |
