--- a/infrastructure/templates/devcontainers/ubuntu/Dockerfile.mustache
+++ b/infrastructure/templates/devcontainers/ubuntu/Dockerfile.mustache
@@ -1,12 +1,12 @@
 FROM {{OS_NAME}}:{{OS_VERSION}}
 
-RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y vim wget ninja-build \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+  vim wget ninja-build \
   libz-dev sqlite3 libsqlite3-dev \
   ncurses-dev libstdc++6 \
   binutils liblzma-dev \
   openssh-client
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
   llvm-{{LLVM_VERSION}}-dev \
   libclang-{{LLVM_VERSION}}-dev \
   libc++-{{LLVM_VERSION}}-dev \
