--- a/infrastructure/templates/github-actions/ci-macos.yml.mustache
+++ b/infrastructure/templates/github-actions/ci-macos.yml.mustache
@@ -33,9 +33,10 @@ jobs:
           brew install zlib ncurses sqlite ninja llvm@${{ matrix.LLVM_VERSION }}
           pip3 install -r requirements.txt --break-system-packages
           ./infrastructure/generator.py cmake --os macos --llvm_version ${{ matrix.LLVM_VERSION }}
-          cmake --preset mull -DMULL_VERSION=${{ steps.metadata.outputs.version }}${{ steps.metadata.outputs.suffix }}
-          cmake --workflow --preset build-and-test
-          cmake --workflow --preset package
+          # new CMake rejects too old json library
+          cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 --preset mull -DMULL_VERSION=${{ steps.metadata.outputs.version }}${{ steps.metadata.outputs.suffix }}
+          cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 --workflow --preset build-and-test
+          cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 --workflow --preset package
           ./tests/end2end/setup_end2end_tests.sh
           ./tests/end2end/run_end2end_tests.sh macos ${{ matrix.LLVM_VERSION }}
           mull-runner-${{ matrix.LLVM_VERSION }} --version
