--- a/infrastructure/templates/github-actions/ci-ubuntu.yml.mustache
+++ b/infrastructure/templates/github-actions/ci-ubuntu.yml.mustache
@@ -21,7 +21,9 @@ jobs:
           [[/strategy]]
     name: [[ OS_NAME ]] ${{ matrix.OS_VERSION }} - LLVM ${{ matrix.LLVM_VERSION }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          submodules: "recursive"
       - uses: ./.github/actions/detect-package-metadata
         id: metadata
       - uses: docker/login-action@v2
