--- a/infrastructure/templates/github-actions/ci-linux.yml.mustache
+++ b/infrastructure/templates/github-actions/ci-linux.yml.mustache
@@ -33,6 +33,7 @@ jobs:
           imageName: ghcr.io/mull-project/internal-[[ OS_NAME_LOWER ]]-[[OS_ARCH]]_[[OS_VERSION]]-llvm-${{ matrix.LLVM_VERSION }}-ci
           configFile: ./.devcontainer/[[ OS_NAME_LOWER ]]_[[OS_VERSION]]-llvm-${{ matrix.LLVM_VERSION }}/devcontainer.json
           runCmd: |
+            set -e
             mkdir -p packages
             bazel build //...
             bazel test //...
